tests/compile_msg/declare/dollar_position_fail.stderr
error: Syntax error: expected an identifier after `$`
 --> compile_msg/declare/dollar_position_fail.rs:5:22
  |
5 |     rdl! { Row { x: $1 } }
  |                      ^

error: expected `,`
  --> compile_msg/declare/dollar_position_fail.rs:8:39
   |
8  |     let field_name_not_support_dollar = fn_widget! {
   |  _______________________________________^
9  | |     rdl! { Row { $x: 1} }
10 | |   };
   | |___^
   |
   = note: this error originates in the macro `fn_widget` (in Nightly builds, run with -Z macro-backtrace for more info)
